fix(carousel): scrollbar on windows firefox now shows only on hover

--- a/src/less/carousel/base/carousel.less
+++ b/src/less/carousel/base/carousel.less
@@ -165,12 +165,14 @@ span.carousel__container {
             -ms-scroll-snap-type: x mandatory;
             scroll-snap-type: mandatory;
             scroll-snap-type: x mandatory;
+            scrollbar-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
             scrollbar-width: thin; // Firefox scrollbar
-            transition: border-color 0.5s,
+            transition: border-color 0.5s, scrollbar-color 0.5s,
                 transform @ebay-carousel-transition-time @ebay-carousel-transition-function;
 
             &:hover {
                 border-color: rgba(0, 0, 0, 0.4);
+                scrollbar-color: rgba(0, 0, 0, 0.4) rgba(0, 0, 0, 0);
             }
 
             &::-webkit-scrollbar {
